--- a/css/activity.css
+++ b/css/activity.css
@@ -8,6 +8,7 @@
 .lists {
   text-align: center;
   display: block;
+  /* 줄 높이 조정 */
   line-height: 1.5;
   font-size: 23px;
   color: antiquewhite;
@@ -18,10 +19,11 @@
   height: 300px;
   display: block;
   margin: 7vh 3vh;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .activity {
+  /* 한 줄로 이루어지게 끔 하기 위해 -> inline-flex 사용  */
   display: inline-flex;
-  margin-top: 60px;
+  margin-top: 30px;
 }
