--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* all  */
 body {
   overflow: hidden;
   font-family: "Gamja Flower", cursive;
@@ -18,6 +19,7 @@ h3 {
   margin-top: 50px;
 }
 
+/* navigation bar */
 .menu * {
   display: inline;
   font-size: 25px;
@@ -41,13 +43,16 @@ h3 {
   align-items: center;
   text-align: center;
   padding-top: 80px;
+  /* 네비게이션 바 위치 고정 fixed !  */
   position: fixed;
+  /* 가운데에 위치 하도록 조정  */
   top: 0;
   left: 0;
   right: 0;
   height: 80px;
 }
 
+/* index */
 .introduce {
   background-size: cover;
   text-align: center;
@@ -57,6 +62,7 @@ h3 {
 
 .image {
   border-radius: 30%;
+  /* 사진을 inline-block으로 만들어서 그 주위를 감싸도록  */
   display: inline-block;
   border: 1px solid gray;
   background-color: rgba(255, 255, 255, 0.1);
